--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ nav > a:hover
 }
 header{
     padding: 10px;
-    background-color: rgb(61, 233, 167);
+    background-color: rgb(52, 180, 131);
 }
 img
 {
@@ -31,6 +31,56 @@ header h1{
 header nav{
     text-align: right;
 }
+
+/***Page d'Acceuil***/
+.form-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 85vh;
+    color: white;
+}
+.formulaire{
+    display: flex;
+    flex-direction: column;
+    width: 350px;
+    background-color: rgb(25, 38, 54);;
+    padding: 2%;
+    /*border-radius: 8px;*/
+    box-shadow: 2px 2px 15px white;
+}
+.formulaire h2{
+    margin-bottom: 10px;
+}
+.formulaire form{
+    display: flex;
+    flex-direction: column;
+}
+
+.formulaire form label{
+    font-weight: bold;
+    padding: 5px 0;
+}
+.formulaire .input{
+    height: 30px;
+    padding: 1% 3%;
+    margin-bottom: 5px;
+    outline: none;
+}
+.submit{
+    padding: 5px;
+    margin-top: 15px;
+    height: 40px;
+    background-color: rgb(52, 180, 131);
+    color: white;
+    border: none;
+    font-size: 1.05rem;
+    cursor: pointer;
+}
+
+/********************/
+
 .container{
     padding: 30px;
     background-color: gray;
@@ -45,9 +95,11 @@ header nav{
     border-radius: 10px;
     width: 500px;
     height: 500px;
-}.
+}
+
 .month h2{
 }
+
 .month table{
     margin: auto;
     align: center;
