--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ header nav{
     display: flex;
     flex-direction: column;
     width: 350px;
-    background-color: rgb(25, 38, 54);;
+    background-color: rgb(25, 38, 54);
     padding: 2%;
     /*border-radius: 8px;*/
     box-shadow: 2px 2px 15px white;
@@ -124,40 +124,41 @@ body
 }
 #tab
 {
-    width: 300px;
-    margin: 0px auto;  
+
+    margin: 0;
+    padding: 0;
+    width: 800px;
     margin-bottom: 100px;
     color: whitesmoke;
-    border: 2px solid whitesmoke;
-    border-radius: 3px;
-    text-align: center;
-}
-.tableau
-{
-    
-    width: 500px;
-    height: 500px;
-    margin: 50px auto;
     background: rgb(25, 38, 54);
-    border: solid white 5px;
-    border-radius: 10px;
+    padding: 20px;
 }
 caption
 {
     color: rgb(61, 233, 167);
-    margin-top: 30px;
+    margin: 30px 0;
 }
 #tab th
 {
-    background: gray;
-    color:white;
+    text-align: left;
+    text-decoration: none;
+   
+    border-collapse: collapse;
 }
-.form-control
+#tab tr:first-child
 {
-    margin: 0 auto;
-    width: 200px;
+    position: relative;
+    bottom: 20px;
 }
-.form-control label
+#tab td
 {
-    color: whitesmoke;
+    padding: 20px 0;
+}
+#tab tr:nth-child(2n)
+{
+    background: rgb(30, 43, 59);
+}
+#tab tr:nth-child(2n+1):not(tr:first-child)
+{
+    background: rgb(20, 33, 49);
 }
